# narou-python

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/narou/: client.py  models.py
